# abelfunctions

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README  README.md  README.rst  _doctest_environment.py  build-requirements.txt  pyproject.toml  renovate.json  riemannsurface_demo.py  riemanntheta_demo.py  rtd-req  runtests.py  setup.py  spkg-check  spkg-install  test-requirements.txt  test_paths.py  tests.py  tox.ini
abelfunctions/: __init__.py  abelmap.pxd  abelmap.py  abelmap.pyx  analytic_continuation.pxd  analytic_continuation.pyx  analytic_continuation_smale.pxd  analytic_continuation_smale.pyx  complex_path.pxd  complex_path.pyx  complex_path_factory.py  differentials.pxd  differentials.py  differentials.pyx  divisor.py  finite_sum_opencl.cl  homology.py  integralbasis.py  monodromy.py  polynomials.pxd  polynomials.pyx  puiseux.py  puiseux_series_ring.py  puiseux_series_ring_element.pxd  puiseux_series_ring_element.pyx  riemann_constant_vector.py  riemann_constant_vector.pyx  riemann_surface.pxd  riemann_surface.py  riemann_surface.pyx  riemann_surface_path.pxd  riemann_surface_path.py  riemann_surface_path.pyx  riemann_surface_path_factory.py  riemannsurface.py  riemannsurface_path.py  riemannsurface_point.py  riemanntheta.py  riemanntheta_misc.py  singularities.py  (+5 more)
doc/: DevelopersGuide.md  Getting-Started.md  GettingStarted.md  Installation.md  Integral-Basis.md  Makefile  Puiseux-Series.md  README.md  Riemann-Theta-Functions.md  Tutorials.md  _Sidebar.md  conf.py  index.rst  introduction.rst  make.bat  rtd-req
examples/: riemannsurface_demo.py  (+3 more)
(+135 files in other folders)
