[build-system]
# Need so install with --no-build-isolation for https://github.com/abelfunctions/abelfunctions/issues/264
# but pip does not currently install these dependencies in this case
requires = [
    "setuptools>=61.0",
    "cython<4",
    "numpy<2",
    "pythran>=0.13.1",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = ["presentation.py", "examples/*"]

[tool.ruff.lint]
ignore = ["E741"]

